# coscout

./: .gitignore  .gitmodules  .licenserc.yaml  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/scripts/: update_version.sh
.github/workflows/: build.yml  install-script.yml  lint-n-test.yml  package.yml
cos/: __init__.py  config.py  constant.py  version.py
cos/cli/: __init__.py  cli.py  collector.py  context.py  remote_config.py
cos/collector/: __init__.py  codes.py  collector.py  mod.py  openers.py  remote_config.py
cos/core/: api.py  exceptions.py  grpc.py  metrics.py  models.py  register.py  request_hook.py  rest.py
cos/install/: updater.py
cos/mods/: __init__.py
cos/mods/common/: __init__.py
cos/mods/common/default/: __init__.py  file_state_handler.py  log_utils.py  mod.py  remote_rule.py  rule_executor.py
cos/mods/common/default/handlers/: __init__.py  handler_interface.py  log_handler.py  mcap_handler.py  ros1_handler.py  ros2_handler.py
cos/mods/common/task/: __init__.py  mod.py  task_handler.py
cos/name/: project_name.py  record_name.py
cos/utils/: __init__.py  devices.py  files.py  https.py  tools.py  uploader.py  yaml.py
script/: coscene.sh  dev-setup.mk  install.ps1  install.sh  package.sh  ubuntu-build.mk
tests/: __init__.py  conftest.py  test_cache.py  test_codes.py  test_collector.py  test_config.py  test_metrics.py  test_openers.py  test_state.py  test_tools.py
